tests/NormalTests/paczka1/fuzzy1/47001955.err
Error in line 14: lnhC9Y A564 879,3
Error in line 4: cJn0m4q6 A296 3,3
Error in line 19: F3ZtosJoN A564 16,2
Error in line 23: F3ZtosJoN S728 8,6
Error in line 33: k5dmy S728 -1,9
Error in line 10: k5dmy S728 4,4
